now using console.error for L_ERR

--- a/test.html
+++ b/test.html
@@ -9,6 +9,8 @@
         <loli-exp>(def test 2)</loli-exp>
         <br>
         <loli-exp>(+ 1 test)</loli-exp>
-        <p>Hello LoLi-WF</p>
+        <br>
+        <p>(+ nil nil)</p>
+        <loli-exp>(+ nil nil)</loli-exp>
     </body>
 </html>
