--- a/test.html
+++ b/test.html
@@ -2,15 +2,13 @@
 <html>
     <head>
         <title>Test of LoLi-WF</title>
-        <meta name="loli-file" content="./test.loli" >
         <script src="./src/loli-loader.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     </head>
     <body>
+        <loli-ns>test.loli</loli-ns>
         <loli-exp>(def test 2)</loli-exp>
         <br>
         <loli-exp>(+ 1 test)</loli-exp>
-        <br>
-        <p>(+ nil nil)</p>
-        <loli-exp>(+ nil nil)</loli-exp>
     </body>
 </html>
