--- a/test.html
+++ b/test.html
@@ -11,5 +11,6 @@
         <br>
         <loli-exp>(+ 1 test abc)</loli-exp>
         <b loli-exp="(+ 1 test abc)"></b>
+        <loli-exp>(member-of? 1 (1 2 3))</loli-exp>
     </body>
 </html>
