--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
         <loli-exp>(def test 2)</loli-exp>
         <br>
         <loli-exp>(+ 1 test abc)</loli-exp>
-        <b loli-exp="(+ 1 test abc)"></b>
-        <loli-exp>(member-of? 1 (1 2 3))</loli-exp>
+        <br>
+        <loli-exp>(len (quote (1 2 3)))</loli-exp>
     </body>
 </html>
