need a more elegant way to deal with symbols such as &gt;

--- a/test.html
+++ b/test.html
@@ -27,5 +27,11 @@
         </loli-exp>
         <br>
         <b>(+ X Y):</b> <loli-exp>(+ x y)</loli-exp>
+        <br>
+        <loli-exp>
+            (if (> 1 2)
+                '<h2>Srsly?</h2>
+                '<h2>LOL</h2>)
+        </loli-exp>
     </body>
 </html>
