--- a/test.html
+++ b/test.html
@@ -30,8 +30,8 @@
         <br>
         <loli-exp>
             (if (> 1 2)
-                '<h2>Srsly?</h2>
-                '<h2>LOL</h2>)
+                "<h2>Srsly?</h2>"
+                "<h2>LOL</h2>")
         </loli-exp>
     </body>
 </html>
